docs(swagger): add current user route documentation (#57)
close #57
